# pyodx_1.2.1

./: .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  README.md  README.rst  __init__.py  pyproject.toml  wheels.yaml
.github/workflows/: main.yml  wheels.yml
docs/: Installation.rst  Usage.rst  conf.py  index.rst  requirements.txt
docs/_build/doctrees/: Dependecies.doctree  Dependencies.doctree  Installation.doctree  Introduction.doctree  Usage.doctree  api.doctree  dependecies.doctree  environment.pickle  index.doctree  installation.doctree  introduction.doctree  usage.doctree
docs/_build/doctrees/source/: dependecies.doctree  installation.doctree  introduction.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  Dependecies.html  Dependencies.html  Installation.html  Introduction.html  Usage.html  api.html  dependecies.html  genindex.html  index.html  installation.html  introduction.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: Dependencies.rst.txt  Usage.rst.txt  api.rst.txt  installation.rst.txt  usage.rst.txt
docs/_build/html/_sources/source/: introduction.rst.txt
docs/_build/html/source/: dependecies.html  installation.html  introduction.html
docs/source/: conf.py
include/: progress.h  pyspam.h  pystat.c  result.c  rows.h
odb/: CMakeLists.txt
odb/src/aux/: idx.c  newio.c
odb/src/include/: odbdump.h
odb/src/lib/: CMakeLists.txt
odb/src/scripts/: CMakeLists.txt
pycc/: CMakeLists.txt  dca_module.c  dict_module.c  geo_module.c  info_module.c  init_module.c  io_module.c  main.c
pyodx_extra/: __init__.py  dr_hook.py  environment.py  exceptions.py  odb_glossary.py  odb_ob.py  parser.py
