[project]
name = "pyodx"
version = "1.2.1"

authors = [  { name="Idir Dehmous", email="idirdehmous@gmail.com" }, ]

description = "Python extension for the ECMWF ODB software"
readme = "README.md"
requires-python = ">=3.9"


[build-system]
requires = [
  "scikit-build-core>=0.5.1",
  "setuptools",
  "wheel"     ,
  "numpy>=1.20"      
]
build-backend = "scikit_build_core.build"



[tool.scikit-build]
build.verbose     = true 
cmake.args        = ["-G", "Unix Makefiles"]
cmake.source-dir  = "."
wheel.install-dir = "pyodx"


[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-*"
skip = "*musllinux*"
manylinux-x86_64-image = "manylinux2014"
build-verbosity = 1
